# dspy-demo

./: .env.example  .gitignore  CLAUDE.md  PROJECT_COMPLETION.md  PYTHON_UPGRADE_SUMMARY.md  README.md  UPGRADE_SUMMARY.md  main.py  pyproject.toml  requirements.txt  uv_tree.md
data/: README.md  classification_dataset.json  entity_extraction_dataset.json  qa_dataset.json
data/company_knowledge/: documents.json
data/financial_data/: sample_stocks.json
docs/: LEARNING_PATH.md
models/: README.md
models/basic_qa/: README.md  metadata.json
models/configs/: basic_qa_config.json  classification_config.json
notebooks/: 01_dspy_basics.ipynb  02_teleprompting.ipynb  03_rag_examples.ipynb  04_advanced_patterns.ipynb
notebooks/01_basics/: getting_started.ipynb
notebooks/01_fundamentals/: 02_signatures.ipynb  03_modules.ipynb  04_predictions.ipynb  getting_started.ipynb
notebooks/02_building/: audio.ipynb  classification.ipynb  custom_module.ipynb  customer_service_agent.ipynb  entity_extraction.ipynb  image_generation_prompting.ipynb  privacy_conscious_delegation.ipynb  program_of_thought.ipynb  rag_system.ipynb
notebooks/02_core_modules/: 01_predict.ipynb  02_chain_of_thought.ipynb  03_program_of_thought.ipynb  04_react_agents.ipynb  05_reasoning.ipynb
notebooks/03_building_programs/: agents.ipynb  audio.ipynb  classification.ipynb  customer_service_agent.ipynb  entity_extraction.ipynb  image_generation_prompting.ipynb  program_of_thought.ipynb
notebooks/03_optimization/: advanced_tool_use.ipynb  classification_finetuning.ipynb  math_reasoning.ipynb
notebooks/04_advanced/: agents.ipynb  multi_hop_rag.ipynb  rl_optimization.ipynb
notebooks/04_optimization/: 03_gepa.ipynb  04_simba.ipynb  advanced_tool_use.ipynb  classification_finetuning.ipynb
notebooks/05_advanced/: 01_multimodal.ipynb  02_adapters.ipynb  04_usage_tracking.ipynb  agents.ipynb
notebooks/05_deployment/: cache.ipynb  output_refinement.ipynb  streaming.ipynb
notebooks/06_deployment/: async.ipynb  mcp_integration.ipynb  saving_loading.ipynb
notebooks/06_real_world/: ai_text_game.ipynb  yahoo_finance_analysis.ipynb
notebooks/07_real_world/: email_extraction.ipynb
scripts/01_basics/: getting_started.py
scripts/01_fundamentals/: 02_signatures.py  03_modules.py  04_predictions.py  getting_started.py
scripts/02_building/: agents.py  custom_module.py  customer_service_agent.py  entity_extraction.py  program_of_thought.py  rag_system.py
scripts/02_core_modules/: 01_predict.py  02_chain_of_thought.py  03_program_of_thought.py  04_react_agents.py  05_reasoning.py
scripts/03_building_programs/: audio.py  classification.py  image_generation_prompting.py  privacy_conscious_delegation.py
scripts/04_advanced/: multi_hop_rag.py  rl_optimization.py
scripts/04_optimization/: 03_gepa.py  04_simba.py  advanced_tool_use.py  classification_finetuning.py  math_reasoning.py
scripts/05_advanced/: 01_multimodal.py  02_adapters.py  04_usage_tracking.py  agents.py  rl_optimization.py
scripts/05_deployment/: async.py  cache.py  output_refinement.py  streaming.py
scripts/06_deployment/: mcp_integration.py  saving_loading.py
scripts/06_real_world/: ai_text_game.py  email_extraction.py  yahoo_finance_analysis.py
src/: advanced_rag.py  basic_qa.py  config.py  optimization_patterns.py  teleprompter_example.py
utils/: __init__.py  datasets.py
