[project]
name = "dspy-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "datasets>=2.21.0",
    "dspy>=2.6.8",
    "dspy-ai>=2.6.8",
    "ipykernel>=6.29.5",
    "notebook>=7.3.2",
    "openai>=1.65.2",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "python-dotenv>=1.0.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
