[project]
name = "dspy-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "chromadb>=0.4.0",
    "datasets>=2.14.0",
    "dspy>=2.6.8",
    "dspy-ai>=2.6.8",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "nltk>=3.8.0",
    "notebook>=7.3.2",
    "numpy>=1.24.0",
    "openai>=1.65.0",
    "pandas>=2.0.0",
    "pip>=25.0.1",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
