[project]
name = "dspy-demo"
version = "0.1.0"
description = "A comprehensive DSPy sample project with examples and tutorials"
readme = "README.md"
requires-python = ">=3.12.11,<3.14"
authors = [
    {name = "DSPy Demo Project", email = "demo@dspy.ai"}
]
license = {text = "MIT"}
keywords = ["dspy", "llm", "ai", "machine-learning", "nlp", "tutorials"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.37.0",
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.0",
    "datasets>=3.0.0",
    "dspy-ai>=2.5.28",
    "email-validator>=2.2.0",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.115.0",
    "gradio>=4.44.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
    "langchain>=0.3.0",
    "librosa>=0.10.2",
    "litellm>=1.50.0",
    "matplotlib>=3.9.0",
    "mem0ai>=0.1.26",
    "numba>=0.60.0"
    "numpy>=2.0.0",
    "openai>=1.51.0",
    "pandas>=2.2.0",
    "pillow>=10.4.0",
    "plotly>=5.24.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "selenium>=4.25.0",
    "soundfile>=0.12.1",
    "speechrecognition>=3.10.4",
    "streamlit>=1.39.0",
    "tiktoken>=0.8.0",
    "torch>=2.4.0",
    "tqdm>=4.66.0",
    "transformers>=4.45.0",
    "uvicorn>=0.30.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "flake8>=7.1.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/stanfordnlp/dspy"
Repository = "https://github.com/stanfordnlp/dspy"
Documentation = "https://dspy.ai"
"Bug Tracker" = "https://github.com/stanfordnlp/dspy/issues"

[project.scripts]
dspy-demo = "scripts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "scripts"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
]

[tool.uv.workspace]
members = ["."]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dspy.*",
    "openai.*",
    "anthropic.*",
    "chromadb.*",
    "faiss.*",
]
ignore_missing_imports = true
